tests/support/validation/invalid/trip_with_timepoints_out_of_order/pattern.pat
PAT;   04;000410020;Inbound   ; 4;42      ;1;1       ;North Sta. - Tide St. via South Station
TPS;113     ;north ;42      ;1;
TPS;118     ;      ;42      ;0;
TPS;233     ;      ;42      ;0;
TPS;6564    ;sosta ;42      ;1;
TPS;234     ;      ;42      ;0;
TPS;30235   ;      ;42      ;0;
TPS;236     ;atlst ;42      ;1;
